// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public package entries > snapshots the advanced runtime API 1`] = `
[
  "Attributes",
  "BaseXmlComponent",
  "BuilderElement",
  "EMPTY_OBJECT",
  "EmptyElement",
  "Formatter",
  "HpsMeasureElement",
  "IgnoreIfEmptyXmlComponent",
  "ImportedRootElementAttributes",
  "ImportedXmlComponent",
  "InitializableXmlComponent",
  "NextAttributeComponent",
  "NumberValueElement",
  "OnOffElement",
  "StringContainer",
  "StringEnumValueElement",
  "StringValueElement",
  "XmlAttributeComponent",
  "XmlComponent",
  "convertToXmlComponent",
  "createRenderSession",
  "createStringElement",
]
`;

exports[`public package entries > snapshots the core runtime API 1`] = `
[
  "AbstractNumbering",
  "Alignment",
  "AlignmentAttributes",
  "AlignmentType",
  "AnnotationReference",
  "Attributes",
  "BaseXmlComponent",
  "Begin",
  "Body",
  "Bookmark",
  "BookmarkEnd",
  "BookmarkStart",
  "Border",
  "BorderElement",
  "BorderStyle",
  "BuilderElement",
  "CORE_ATTRIBUTE_NAMESPACES",
  "CarriageReturn",
  "CharacterSet",
  "CheckBox",
  "CheckBoxSymbolElement",
  "CheckBoxUtil",
  "Column",
  "ColumnBreak",
  "Columns",
  "Comment",
  "CommentRangeEnd",
  "CommentRangeStart",
  "CommentReference",
  "Comments",
  "ConcreteHyperlink",
  "ConcreteNumbering",
  "ContinuationSeparator",
  "DEFAULT_TABLE_STYLE_OPTIONS",
  "DOCUMENT_ROOT_ATTRIBUTE_NAMESPACES",
  "DayLong",
  "DayShort",
  "DeletedTextRun",
  "Document",
  "DocumentAttributeNamespaces",
  "DocumentAttributes",
  "DocumentBackground",
  "DocumentBackgroundAttributes",
  "DocumentDefaults",
  "DocumentGridType",
  "Drawing",
  "DropCapType",
  "EMPTY_OBJECT",
  "EmphasisMark",
  "EmphasisMarkType",
  "EmptyElement",
  "End",
  "EndnoteReference",
  "ExternalHyperlink",
  "File",
  "FileChild",
  "FootNoteReferenceRunAttributes",
  "FootNotes",
  "Footer",
  "FooterWrapper",
  "FootnoteReference",
  "FootnoteReferenceElement",
  "FootnoteReferenceRun",
  "FrameAnchorType",
  "FrameWrap",
  "GridSpan",
  "HEADER_FOOTER_ATTRIBUTE_NAMESPACES",
  "Header",
  "HeaderFooterReference",
  "HeaderFooterReferenceType",
  "HeaderFooterType",
  "HeaderWrapper",
  "HeadingLevel",
  "HeightRule",
  "HighlightColor",
  "HorizontalPositionAlign",
  "HorizontalPositionRelativeFrom",
  "HpsMeasureElement",
  "HyperlinkType",
  "IgnoreIfEmptyXmlComponent",
  "ImageRun",
  "ImportedRootElementAttributes",
  "ImportedXmlComponent",
  "Indent",
  "InitializableXmlComponent",
  "InsertedTextRun",
  "InstructionText",
  "InternalHyperlink",
  "LastRenderedPageBreak",
  "LeaderType",
  "Level",
  "LevelFormat",
  "LevelOverride",
  "LevelSuffix",
  "LineNumberRestartFormat",
  "LineRuleType",
  "Math",
  "MathAngledBrackets",
  "MathCurlyBrackets",
  "MathDegree",
  "MathDenominator",
  "MathFraction",
  "MathFunction",
  "MathFunctionName",
  "MathFunctionProperties",
  "MathIntegral",
  "MathLimit",
  "MathLimitLower",
  "MathLimitUpper",
  "MathNumerator",
  "MathPreSubSuperScript",
  "MathRadical",
  "MathRadicalProperties",
  "MathRoundBrackets",
  "MathRun",
  "MathSquareBrackets",
  "MathSubScript",
  "MathSubSuperScript",
  "MathSum",
  "MathSuperScript",
  "Media",
  "MonthLong",
  "MonthShort",
  "NextAttributeComponent",
  "NoBreakHyphen",
  "NumberFormat",
  "NumberProperties",
  "NumberValueElement",
  "NumberedItemReference",
  "NumberedItemReferenceFormat",
  "Numbering",
  "OnOffElement",
  "OutlineLevel",
  "OverlapType",
  "Packer",
  "PageBorderDisplay",
  "PageBorderOffsetFrom",
  "PageBorderZOrder",
  "PageBorders",
  "PageBreak",
  "PageBreakBefore",
  "PageMargin",
  "PageNumber",
  "PageNumberElement",
  "PageNumberField",
  "PageNumberFieldType",
  "PageNumberSeparator",
  "PageNumberType",
  "PageNumberTypeAttributes",
  "PageOrientation",
  "PageReference",
  "PageTextDirection",
  "PageTextDirectionType",
  "Paragraph",
  "ParagraphProperties",
  "ParagraphPropertiesDefaults",
  "PositionalTab",
  "PositionalTabAlignment",
  "PositionalTabLeader",
  "PositionalTabRelativeTo",
  "PrettifyType",
  "RelativeHorizontalPosition",
  "RelativeVerticalPosition",
  "Run",
  "RunFonts",
  "RunProperties",
  "RunPropertiesChange",
  "RunPropertiesDefaults",
  "STYLES_ATTRIBUTE_NAMESPACES",
  "SectionProperties",
  "SectionType",
  "SectionTypeAttributes",
  "Separate",
  "Separator",
  "SequentialIdentifier",
  "Shading",
  "ShadingType",
  "SimpleField",
  "SimpleMailMergeField",
  "SoftHyphen",
  "SpaceType",
  "Spacing",
  "StringContainer",
  "StringEnumValueElement",
  "StringValueElement",
  "Style",
  "StyleForCharacter",
  "StyleForParagraph",
  "StyleLevel",
  "Styles",
  "SymbolRun",
  "TDirection",
  "THEMATIC_BREAK_BORDER",
  "Tab",
  "TabAttributes",
  "TabStop",
  "TabStopItem",
  "TabStopPosition",
  "TabStopType",
  "Table",
  "TableAnchorType",
  "TableBorders",
  "TableCell",
  "TableCellBorders",
  "TableFloatProperties",
  "TableLayout",
  "TableLayoutType",
  "TableLook",
  "TableOfContents",
  "TableProperties",
  "TableRow",
  "TableRowHeight",
  "TableRowHeightAttributes",
  "TableRowProperties",
  "TableWidthElement",
  "TextDirection",
  "TextEffect",
  "TextRun",
  "TextWrappingSide",
  "TextWrappingType",
  "Textbox",
  "ThematicBreak",
  "Type",
  "Underline",
  "UnderlineType",
  "VerticalAlign",
  "VerticalAlignAttributes",
  "VerticalAlignElement",
  "VerticalAlignSection",
  "VerticalAlignTable",
  "VerticalMerge",
  "VerticalMergeType",
  "VerticalPositionAlign",
  "VerticalPositionRelativeFrom",
  "WidthType",
  "WrapNone",
  "WrapSquare",
  "WrapTight",
  "WrapTopAndBottom",
  "XmlAttributeComponent",
  "XmlComponent",
  "YearLong",
  "YearShort",
  "bookmarkUniqueNumericIdGen",
  "convertInchesToTwip",
  "convertMillimetersToTwip",
  "convertToXmlComponent",
  "createDocumentGrid",
  "createFrameProperties",
  "createHorizontalPosition",
  "createLineNumberType",
  "createMathAccentCharacter",
  "createMathBase",
  "createMathLimitLocation",
  "createMathNAryProperties",
  "createMathPreSubSuperScriptProperties",
  "createMathSubScriptElement",
  "createMathSubScriptProperties",
  "createMathSubSuperScriptProperties",
  "createMathSuperScriptElement",
  "createMathSuperScriptProperties",
  "createPageSize",
  "createRenderSession",
  "createSimplePos",
  "createStringElement",
  "createVerticalPosition",
  "dateTimeValue",
  "decimalNumber",
  "docPropertiesUniqueNumericIdGen",
  "eighthPointMeasureValue",
  "hashedId",
  "hexColorValue",
  "hpsMeasureValue",
  "longHexNumber",
  "measurementOrPercentValue",
  "percentageValue",
  "pointMeasureValue",
  "positiveUniversalMeasureValue",
  "resolveCheckboxSymbol",
  "sectionMarginDefaults",
  "sectionPageSizeDefaults",
  "shortHexNumber",
  "signedHpsMeasureValue",
  "signedTwipsMeasureValue",
  "twipsMeasureValue",
  "uCharHexNumber",
  "uniqueId",
  "uniqueNumericIdCreator",
  "universalMeasureValue",
  "unsignedDecimalNumber",
]
`;

exports[`public package entries > snapshots the patcher runtime API 1`] = `
[
  "PatchType",
  "StyleType",
  "TokenNotFoundError",
  "listPlaceholders",
  "patchDetector",
  "patchDocument",
  "readStyleIds",
  "readStyles",
]
`;

exports[`public package entries > snapshots the root runtime API 1`] = `
[
  "AbstractNumbering",
  "Alignment",
  "AlignmentAttributes",
  "AlignmentType",
  "AnnotationReference",
  "Attributes",
  "BaseXmlComponent",
  "Begin",
  "Body",
  "Bookmark",
  "BookmarkEnd",
  "BookmarkStart",
  "Border",
  "BorderElement",
  "BorderStyle",
  "BuilderElement",
  "CORE_ATTRIBUTE_NAMESPACES",
  "CarriageReturn",
  "CharacterSet",
  "CheckBox",
  "CheckBoxSymbolElement",
  "CheckBoxUtil",
  "Column",
  "ColumnBreak",
  "Columns",
  "Comment",
  "CommentRangeEnd",
  "CommentRangeStart",
  "CommentReference",
  "Comments",
  "ConcreteHyperlink",
  "ConcreteNumbering",
  "ContinuationSeparator",
  "DEFAULT_TABLE_STYLE_OPTIONS",
  "DOCUMENT_ROOT_ATTRIBUTE_NAMESPACES",
  "DayLong",
  "DayShort",
  "DeletedTextRun",
  "Document",
  "DocumentAttributeNamespaces",
  "DocumentAttributes",
  "DocumentBackground",
  "DocumentBackgroundAttributes",
  "DocumentDefaults",
  "DocumentGridType",
  "Drawing",
  "DropCapType",
  "EMPTY_OBJECT",
  "EmphasisMark",
  "EmphasisMarkType",
  "EmptyElement",
  "End",
  "EndnoteReference",
  "ExternalHyperlink",
  "File",
  "FileChild",
  "FootNoteReferenceRunAttributes",
  "FootNotes",
  "Footer",
  "FooterWrapper",
  "FootnoteReference",
  "FootnoteReferenceElement",
  "FootnoteReferenceRun",
  "FrameAnchorType",
  "FrameWrap",
  "GridSpan",
  "HEADER_FOOTER_ATTRIBUTE_NAMESPACES",
  "Header",
  "HeaderFooterReference",
  "HeaderFooterReferenceType",
  "HeaderFooterType",
  "HeaderWrapper",
  "HeadingLevel",
  "HeightRule",
  "HighlightColor",
  "HorizontalPositionAlign",
  "HorizontalPositionRelativeFrom",
  "HpsMeasureElement",
  "HyperlinkType",
  "IgnoreIfEmptyXmlComponent",
  "ImageRun",
  "ImportedRootElementAttributes",
  "ImportedXmlComponent",
  "Indent",
  "InitializableXmlComponent",
  "InsertedTextRun",
  "InstructionText",
  "InternalHyperlink",
  "LastRenderedPageBreak",
  "LeaderType",
  "Level",
  "LevelFormat",
  "LevelOverride",
  "LevelSuffix",
  "LineNumberRestartFormat",
  "LineRuleType",
  "Math",
  "MathAngledBrackets",
  "MathCurlyBrackets",
  "MathDegree",
  "MathDenominator",
  "MathFraction",
  "MathFunction",
  "MathFunctionName",
  "MathFunctionProperties",
  "MathIntegral",
  "MathLimit",
  "MathLimitLower",
  "MathLimitUpper",
  "MathNumerator",
  "MathPreSubSuperScript",
  "MathRadical",
  "MathRadicalProperties",
  "MathRoundBrackets",
  "MathRun",
  "MathSquareBrackets",
  "MathSubScript",
  "MathSubSuperScript",
  "MathSum",
  "MathSuperScript",
  "Media",
  "MonthLong",
  "MonthShort",
  "NextAttributeComponent",
  "NoBreakHyphen",
  "NumberFormat",
  "NumberProperties",
  "NumberValueElement",
  "NumberedItemReference",
  "NumberedItemReferenceFormat",
  "Numbering",
  "OnOffElement",
  "OutlineLevel",
  "OverlapType",
  "Packer",
  "PageBorderDisplay",
  "PageBorderOffsetFrom",
  "PageBorderZOrder",
  "PageBorders",
  "PageBreak",
  "PageBreakBefore",
  "PageMargin",
  "PageNumber",
  "PageNumberElement",
  "PageNumberField",
  "PageNumberFieldType",
  "PageNumberSeparator",
  "PageNumberType",
  "PageNumberTypeAttributes",
  "PageOrientation",
  "PageReference",
  "PageTextDirection",
  "PageTextDirectionType",
  "Paragraph",
  "ParagraphProperties",
  "ParagraphPropertiesDefaults",
  "PatchType",
  "PositionalTab",
  "PositionalTabAlignment",
  "PositionalTabLeader",
  "PositionalTabRelativeTo",
  "PrettifyType",
  "RelativeHorizontalPosition",
  "RelativeVerticalPosition",
  "Run",
  "RunFonts",
  "RunProperties",
  "RunPropertiesChange",
  "RunPropertiesDefaults",
  "STYLES_ATTRIBUTE_NAMESPACES",
  "SectionProperties",
  "SectionType",
  "SectionTypeAttributes",
  "Separate",
  "Separator",
  "SequentialIdentifier",
  "Shading",
  "ShadingType",
  "SimpleField",
  "SimpleMailMergeField",
  "SoftHyphen",
  "SpaceType",
  "Spacing",
  "StringContainer",
  "StringEnumValueElement",
  "StringValueElement",
  "Style",
  "StyleForCharacter",
  "StyleForParagraph",
  "StyleLevel",
  "StyleType",
  "Styles",
  "SymbolRun",
  "TDirection",
  "THEMATIC_BREAK_BORDER",
  "Tab",
  "TabAttributes",
  "TabStop",
  "TabStopItem",
  "TabStopPosition",
  "TabStopType",
  "Table",
  "TableAnchorType",
  "TableBorders",
  "TableCell",
  "TableCellBorders",
  "TableFloatProperties",
  "TableLayout",
  "TableLayoutType",
  "TableLook",
  "TableOfContents",
  "TableProperties",
  "TableRow",
  "TableRowHeight",
  "TableRowHeightAttributes",
  "TableRowProperties",
  "TableWidthElement",
  "TextDirection",
  "TextEffect",
  "TextRun",
  "TextWrappingSide",
  "TextWrappingType",
  "Textbox",
  "ThematicBreak",
  "TokenNotFoundError",
  "Type",
  "Underline",
  "UnderlineType",
  "VerticalAlign",
  "VerticalAlignAttributes",
  "VerticalAlignElement",
  "VerticalAlignSection",
  "VerticalAlignTable",
  "VerticalMerge",
  "VerticalMergeType",
  "VerticalPositionAlign",
  "VerticalPositionRelativeFrom",
  "WidthType",
  "WrapNone",
  "WrapSquare",
  "WrapTight",
  "WrapTopAndBottom",
  "XmlAttributeComponent",
  "XmlComponent",
  "YearLong",
  "YearShort",
  "bookmarkUniqueNumericIdGen",
  "convertInchesToTwip",
  "convertMillimetersToTwip",
  "convertToXmlComponent",
  "createDocumentGrid",
  "createFrameProperties",
  "createHorizontalPosition",
  "createLineNumberType",
  "createMathAccentCharacter",
  "createMathBase",
  "createMathLimitLocation",
  "createMathNAryProperties",
  "createMathPreSubSuperScriptProperties",
  "createMathSubScriptElement",
  "createMathSubScriptProperties",
  "createMathSubSuperScriptProperties",
  "createMathSuperScriptElement",
  "createMathSuperScriptProperties",
  "createPageSize",
  "createRenderSession",
  "createSimplePos",
  "createStringElement",
  "createVerticalPosition",
  "dateTimeValue",
  "decimalNumber",
  "docPropertiesUniqueNumericIdGen",
  "eighthPointMeasureValue",
  "hashedId",
  "hexColorValue",
  "hpsMeasureValue",
  "listPlaceholders",
  "longHexNumber",
  "measurementOrPercentValue",
  "patchDetector",
  "patchDocument",
  "percentageValue",
  "pointMeasureValue",
  "positiveUniversalMeasureValue",
  "readStyleIds",
  "readStyles",
  "resolveCheckboxSymbol",
  "sectionMarginDefaults",
  "sectionPageSizeDefaults",
  "shortHexNumber",
  "signedHpsMeasureValue",
  "signedTwipsMeasureValue",
  "twipsMeasureValue",
  "uCharHexNumber",
  "uniqueId",
  "uniqueNumericIdCreator",
  "universalMeasureValue",
  "unsignedDecimalNumber",
]
`;
